Archive2/43/2188046f3f347a/output
main.cpp:51:45: error: 'MyPred' is not a template
 struct FilteredPushBack<X, List<Values...>, MyPred<X>>
                                             ^
